--- a/app/views/announcements/index.html.erb
+++ b/app/views/announcements/index.html.erb
@@ -1,10 +1,10 @@
 <div class="container pt-4 pb-2">
-  <%= form_tag announcements_path, method: :get do %>
+  <%= form_tag announcements_path, method: :get, class: "form-inline" do %>
     <%= text_field_tag :keyword, '', class: "form-control" %>
     <%= submit_tag 'Chercher', class: "btn btn-primary" %>
   <% end %>
 </div>
-<div class="px-4">
+<div class="px-4 scrollable-x w-100">
   <% if @announcements&.any? %>
     <table class="table">
       <thead>
@@ -24,6 +24,8 @@
             <td><%= announcement.annonce_n %></td>
             <td><%= announcement.siren %></td>
             <td><%= announcement.rcs %></td>
+            <td><%= announcement.nom %></td>
+            <td><%= announcement.prenom %></td>
             <td><%= announcement.denomination %></td>
             <td><%= announcement.forme %></td>
             <td><%= announcement.capital %></td>
